--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.279.0",
     "react": "^18.2.0",
+    "react-datetime-picker": "^5.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
   },
